force-app/main/default/objects/AppConfiguration__mdt/AppConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>AppConfiguration</label>
    <pluralLabel>AppConfigurations</pluralLabel>
</CustomObject>