force-app/main/default/objects/AppConfiguration__mdt/fields/ConfigurationFieldNumber__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationFieldNumber__c</fullName>
    <label>ConfigurationFieldNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>