force-app/main/default/objects/AppConfiguration__mdt/fields/ConfigurationFieldOne__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationFieldOne__c</fullName>
    <label>ConfigurationFieldOne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>