force-app/main/default/objects/AppConfiguration__mdt/fields/ConfigurationFieldTwo__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationFieldTwo__c</fullName>
    <label>ConfigurationFieldTwo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>