force-app/main/default/objects/AppConfiguration__mdt/fields/IsConfigurationActive__c.field-meta.xml
<CustomField>
    <fullName>IsConfigurationActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConfigurationActive</label>
    <type>Checkbox</type>
</CustomField>