force-app/main/default/objects/AppConfiguration__mdt/fields/URLConfiguration__c.field-meta.xml
<CustomField>
    <fullName>URLConfiguration__c</fullName>
    <label>URLConfiguration</label>
    <type>Url</type>
</CustomField>